--- a/index.html
+++ b/index.html
@@ -6,62 +6,63 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   <script type="text/x-handlebars" data-template-name="todos">
-    <section id="todoapp">
-      <header id="header">
-        <h1>todos</h1>
-        {{input 
-          type="text" 
-          id="new-todo" 
-          placeholder="What needs to be done?"
-          value=newTitle
-          action="createTodo"}}
-      </header>
-
-      <section id="main">
-        <ul id="todo-list">
+    <script type="text/x-handlebars" data-template-name="todos/index">
+      <ul id="todo-list">
         {{#each todo in model itemController="todo"}}
-          <li {{bind-attr class="todo.isCompleted:completed todo.isEditing:editing"}}>
-            {{#if todo.isEditing}}
-              {{edit-todo class="edit" value=todo.title focuse-out="acceptChanges" insert-newline="acceptChanges"}}
-              {{else}}
-            {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
-            <label {{action "editTodo" on="doubleClick"}}>{{todo.title}}</label><button {{action "removeTodo"}} class="destroy"></button>
-              {{/if}}
-          </li>
-          {{/each}}
-        </ul>
+      <li {{bind-attr class="todo.isCompleted:completed todo.isEditing:editing"}}>
+        {{#if todo.isEditing}}
+          {{edit-todo class="edit" value=todo.title focuse-out="acceptChanges" insert-newline="acceptChanges"}}
+          {{else}}
+        {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
+          <label {{action "editTodo" on="doubleClick"}}>{{todo.title}}</label><button {{action "removeTodo"}} class="destroy"></button>
+        {{/if}}
+      </li>
+        {{/each}}
+      </ul>
+    </script>
+    <script type="text/x-handlebars" data-template-name="todos">
+      <section id="todoapp">
+        <header id="header">
+          <h1>todos</h1>
+          {{input 
+            type="text" 
+            id="new-todo" 
+            placeholder="What needs to be done?"
+            value=newTitle
+            action="createTodo"}}
+        </header>
 
-        <input type="checkbox" id="toggle-all">
+        <section id="main">
+          {{outlet}}
+
+          <input type="checkbox" id="toggle-all">
+        </section>
+
+        <footer id="footer">
+          <span id="todo-count">
+            <strong>{{remaining}}</strong> {{inflection}} left
+          </span>
+          <ul id="filters">
+            <li>
+              <a href="all">All</a>
+            </li>
+            <li>
+              {{#link-to "todos.active" activeClass="selected"}}Active{{/link-to}}
+            </li>
+            <li>
+              {{#link-to "todos.completed" activeClass="selected"}}Completed{{/link-to}}
+            </li>
+          </ul>
+
+          <button id="clear-completed">
+            Clear completed (1)
+          </button>
+        </footer>
       </section>
 
-      <footer id="footer">
-        <span id="todo-count">
-          <strong>{{remaining}}</strong> {{inflection}} left
-        </span>
-        <ul id="filters">
-          <li>
-            <a href="all" class="selected">All</a>
-          </li>
-          <li>
-            <a href="active">Active</a>
-          </li>
-          <li>
-            <a href="completed">Completed</a>
-          </li>
-        </ul>
-
-        <button id="clear-completed">
-          Clear completed (1)
-        </button>
+      <footer id="info">
+        <p>Double-click to edit a todo</p>
       </footer>
-    </section>
-
-    <footer id="info">
-      <p>Double-click to edit a todo</p>
-    </footer>
-
-    </script>
     </script>
   <script src="js/libs/jquery-1.11.1.min.js"></script>
   <script src="js/libs/handlebars-v1.3.0.js"></script>
